--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 <body>
 <nav>
     <a href="about.html">About</a>
+    <a href="about.html">About</a>
     <a href="speakers.html">Speakers</a>
     <a href="past-workshops.html">Past Workshops</a>
 </nav>
