--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Past Ocean Oxygen Workshop</title>
+    <title>About - Past Ocean Oxygen Workshop</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
@@ -12,60 +12,44 @@
             height: 100vh;
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
+            justify-content: center;
             align-items: center;
             text-align: center;
+            color: white;
             font-family: Arial, sans-serif;
-            color: #ffffff;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
         }
         nav {
             width: 100%;
             position: absolute;
             top: 0;
-            background: rgba(0, 0, 0, 0.5);
-            padding: 15px 0;
+            padding: 20px;
             text-align: center;
+            background: rgba(0, 0, 0, 0.6);
         }
         nav a {
             color: white;
             text-decoration: none;
-            margin: 0 20px;
+            margin: 0 15px;
             font-size: 20px;
-            font-weight: bold;
-            padding: 10px;
-        }
-        nav a:hover {
-            color: #ffcc00;
         }
         .content {
-            flex: 1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 2rem;
+            max-width: 800px;
+            background: rgba(0, 0, 0, 0.5);
             padding: 20px;
-        }
-        @media (max-width: 768px) {
-            nav a {
-                font-size: 16px;
-                margin: 0 10px;
-            }
-            .content {
-                font-size: 1.5rem;
-                padding: 10px;
-            }
+            border-radius: 10px;
         }
     </style>
 </head>
 <body>
 <nav>
+    <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="speakers.html">Speakers</a>
     <a href="past-workshops.html">Past Workshops</a>
 </nav>
 <div class="content">
-    <h1>Past Ocean Oxygen Workshop</h1>
+    <h1>About the Workshop</h1>
+    <p>Past Ocean Oxygen Workshop is a scientific conference dedicated to understanding the history and future of ocean oxygen levels. Experts from around the world share their research and insights.</p>
 </div>
 </body>
 </html>
