--- a/index.html
+++ b/index.html
@@ -4,67 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Past Ocean Oxygen Workshop</title>
-    <style>
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        body {
-            background: url('ocean-background.jpg') no-repeat center center fixed;
-            background-size: cover;
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            align-items: center;
-            text-align: center;
-            font-family: Arial, sans-serif;
-            color: #ffffff;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
-        }
-        nav {
-            width: 100%;
-            position: absolute;
-            top: 0;
-            background: rgba(0, 0, 0, 0.5);
-            padding: 15px 0;
-            text-align: center;
-        }
-        nav a {
-            color: white;
-            text-decoration: none;
-            margin: 0 20px;
-            font-size: 20px;
-            font-weight: bold;
-            padding: 10px;
-        }
-        nav a:hover {
-            color: #ffcc00;
-        }
-        .content {
-            flex: 1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 2rem;
-            padding: 20px;
-        }
-        @media (max-width: 768px) {
-            nav a {
-                font-size: 16px;
-                margin: 0 10px;
-            }
-            .content {
-                font-size: 1.5rem;
-                padding: 10px;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <nav>
+    <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="speakers.html">Speakers</a>
     <a href="past-workshops.html">Past Workshops</a>
 </nav>
-<div class="content">
+<div class="content home-content">
     <h1>Past Ocean Oxygen Workshop</h1>
 </div>
 </body>
