--- a/about.html
+++ b/about.html
@@ -4,41 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - Past Ocean Oxygen Workshop</title>
-    <style>
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        body {
-            background: url('ocean-background.jpg') no-repeat center center fixed;
-            background-size: cover;
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            color: white;
-            font-family: Arial, sans-serif;
-        }
-        nav {
-            width: 100%;
-            position: absolute;
-            top: 0;
-            padding: 20px;
-            text-align: center;
-            background: rgba(0, 0, 0, 0.6);
-        }
-        nav a {
-            color: white;
-            text-decoration: none;
-            margin: 0 15px;
-            font-size: 20px;
-        }
-        .content {
-            max-width: 800px;
-            background: rgba(0, 0, 0, 0.5);
-            padding: 20px;
-            border-radius: 10px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <nav>
@@ -48,7 +14,7 @@
     <a href="past-workshops.html">Past Workshops</a>
 </nav>
 <div class="content">
-    <h1>About the Workshop </h1>
+    <h1>About the Workshop</h1>
     <p>Past Ocean Oxygen Workshop is a scientific conference dedicated to understanding the history and future of ocean oxygen levels. Experts from around the world share their research and insights.</p>
 </div>
 </body>
