--- a/index.html
+++ b/index.html
@@ -7,14 +7,33 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="speakers.html">Speakers</a>
-    <a href="past-workshops.html">Past Workshops</a>
-</nav>
-<div class="content home-content">
-    <h1>Past Ocean Oxygen Workshop</h1>
-</div>
+    <header>
+        <div class="header-container">
+            <a href="index.html" class="logo">PO<span>2</span> Workshop</a>
+            <nav>
+                <ul>
+                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="speakers.html">Speakers</a></li>
+                    <li><a href="past-workshops.html">Past Workshops</a></li>
+                    <li><a href="directions.html">Directions</a></li>
+                    <li><a href="faq.html">FAQ</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <div class="content home-content">
+        <h1>Past Ocean Oxygen Workshop</h1>
+        <p>Exploring the historical changes in oceanic oxygen levels to better understand our future</p>
+        <div>
+            <a href="registration.html" class="btn">Register Now</a>
+            <a href="program.html" class="btn">View Program</a>
+        </div>
+    </div>
+
+    <footer>
+        <p>© 2025 Past Ocean Oxygen Workshop | Contact: info@po2workshop.org</p>
+    </footer>
 </body>
 </html>
