--- a/about.html
+++ b/about.html
@@ -7,15 +7,35 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="speakers.html">Speakers</a>
-    <a href="past-workshops.html">Past Workshops</a>
-</nav>
-<div class="content">
-    <h1>About the Workshop</h1>
-    <p>Past Ocean Oxygen Workshop is a scientific conference dedicated to understanding the history and future of ocean oxygen levels. Experts from around the world share their research and insights.</p>
-</div>
+    <header>
+        <div class="header-container">
+            <a href="index.html" class="logo">PO<span>2</span> Workshop</a>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html" class="active">About</a></li>
+                    <li><a href="speakers.html">Speakers</a></li>
+                    <li><a href="past-workshops.html">Past Workshops</a></li>
+                    <li><a href="directions.html">Directions</a></li>
+                    <li><a href="faq.html">FAQ</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <div class="content">
+        <h1>About the Workshop</h1>
+        <p>The Past Ocean Oxygen Workshop (PO<sup>2</sup>) is a scientific conference dedicated to understanding the history and future of ocean oxygen levels. Our interdisciplinary approach brings together experts from oceanography, climatology, geology, and related fields to share cutting-edge research.</p>
+        
+        <h2>Our Mission</h2>
+        <p>We aim to facilitate collaboration and knowledge sharing among researchers studying ocean deoxygenation across various time scales. By understanding past changes in ocean oxygen levels, we can better predict and mitigate future impacts on marine ecosystems and global climate systems.</p>
+        
+        <h2>Conference Highlights</h2>
+        <p>The workshop features keynote presentations, panel discussions, poster sessions, and networking opportunities. Participants will have the chance to engage with leading researchers in the field and form new collaborative relationships.</p>
+    </div>
+
+    <footer>
+        <p>© 2025 Past Ocean Oxygen Workshop | Contact: info@po2workshop.org</p>
+    </footer>
 </body>
 </html>
