--- a/index.html
+++ b/index.html
@@ -1,39 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Past Ocean Oxygen Workshop</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-    <header>
-        <div class="header-container">
-            <a href="index.html" class="logo">PO<span>2</span> Workshop</a>
-            <nav>
-                <ul>
-                    <li><a href="index.html" class="active">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="speakers.html">Speakers</a></li>
-                    <li><a href="past-workshops.html">Past Workshops</a></li>
-                    <li><a href="directions.html">Directions</a></li>
-                    <li><a href="faq.html">FAQ</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
 
-    <div class="content home-content">
-        <h1>Past Ocean Oxygen Workshop</h1>
-        <p>Exploring the historical changes in oceanic oxygen levels to better understand our future</p>
-        <div>
-            <a href="registration.html" class="btn">Register Now</a>
-            <a href="program.html" class="btn">View Program</a>
+<!-- Navigation -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <div class="container">
+        <a class="navbar-brand" href="#">PO2 Workshop</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li>
+                <li class="nav-item"><a class="nav-link" href="faq.html">FAQs</a></li>
+                <li class="nav-item"><a class="nav-link" href="past-workshops.html">Past Workshops</a></li>
+            </ul>
         </div>
     </div>
+</nav>
 
-    <footer>
-        <p>© 2025 Past Ocean Oxygen Workshop | Contact: info@po2workshop.org</p>
-    </footer>
+<!-- Hero Section -->
+<header class="hero-section text-white text-center d-flex align-items-center">
+    <div class="container">
+        <h1>Past Ocean Oxygen Workshop</h1>
+        <p class="lead">Exploring oxygen dynamics in our changing oceans.</p>
+        <a href="about.html" class="btn btn-light btn-lg mt-3">Learn More</a>
+    </div>
+</header>
+
+<!-- Content Section -->
+<section class="py-5">
+    <div class="container">
+        <h2>Welcome to PO2 Workshop</h2>
+        <p>This is the central hub for the Past Ocean Oxygen Workshop series, bringing together leading researchers to discuss oxygen variability and its implications for past, present, and future oceans.</p>
+
+        <h3>Upcoming Workshop</h3>
+        <ul>
+            <li><strong>Date:</strong> November 2025</li>
+            <li><strong>Location:</strong> Bristol, UK</li>
+            <li><strong>Registration:</strong> Opens July 2025</li>
+        </ul>
+
+        <a href="speakers.html" class="btn btn-outline-primary mt-3">Meet the Speakers</a>
+    </div>
+</section>
+
+<!-- Footer -->
+<footer class="bg-dark text-white text-center py-3">
+    <p>&copy; 2025 Past Ocean Oxygen Workshop. All rights reserved.</p>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
