Update website content

--- a/about.html
+++ b/about.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - Past Ocean Oxygen Workshop</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .coming-soon {
+            text-align: center;
+            padding: 50px 0;
+            font-size: 1.5rem;
+            color: #666;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -13,8 +21,8 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html" class="active">About</a></li>
-                    <li><a href="speakers.html">Speakers</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="speakers.html" class="active">Speakers</a></li>
                     <li><a href="past-workshops.html">Past Workshops</a></li>
                     <li><a href="directions.html">Directions</a></li>
                     <li><a href="faq.html">FAQ</a></li>
@@ -24,14 +32,10 @@
     </header>
 
     <div class="content">
-        <h1>About the Workshop</h1>
-        <p>The Past Ocean Oxygen Workshop (PO<sup>2</sup>) is a scientific conference dedicated to understanding the history and future of ocean oxygen levels. Our interdisciplinary approach brings together experts from oceanography, climatology, geology, and related fields to share cutting-edge research.</p>
-        
-        <h2>Our Mission</h2>
-        <p>We aim to facilitate collaboration and knowledge sharing among researchers studying ocean deoxygenation across various time scales. By understanding past changes in ocean oxygen levels, we can better predict and mitigate future impacts on marine ecosystems and global climate systems.</p>
-        
-        <h2>Conference Highlights</h2>
-        <p>The workshop features keynote presentations, panel discussions, poster sessions, and networking opportunities. Participants will have the chance to engage with leading researchers in the field and form new collaborative relationships.</p>
+        <h1>Featured Speakers</h1>
+        <div class="coming-soon">
+            Coming soon
+        </div>
     </div>
 
     <footer>
