--- a/index.html
+++ b/index.html
@@ -36,14 +36,13 @@
 <!-- Main Content Section -->
 <div class="content home-content">
     <h2>Welcome to PO<sup>2</sup> Workshop</h2>
-    <p>This is the central hub for the Past Ocean Oxygen Workshop series, bringing together leading researchers to discuss oxygen variability and its implications for past, present, and future oceans.</p>
+    <p>Notable Hypoxic Events of the Geologic Past</p>
 
     <h2>Upcoming Workshop</h2>
-    <p><strong>Date:</strong> November 2025<br>
-        <strong>Location:</strong> Bristol, UK<br>
-        <strong>Registration:</strong> Opens July 2025</p>
+    <p><strong>Date:</strong> December 10-12, 2025<br>
+        <strong>Location:</strong> Raleigh, USA<br>
+        <strong>Registration:</strong> Open Summer 2025</p>
 
-    <a href="speakers.html" class="btn">Meet the Speakers</a>
 </div>
 
 <footer>
