Update website content

--- a/index.html
+++ b/index.html
@@ -28,17 +28,15 @@
 <div class="hero-section">
     <div class="hero-content">
         <h1>Past Ocean Oxygen Workshop</h1>
-        <p class="lead">Exploring oxygen dynamics in our changing oceans.</p>
+        <p class="lead">Notable Hypoxic Events of the Geologic Past</p>
         <a href="about.html" class="btn">Learn More</a>
     </div>
 </div>
 
 <!-- Main Content Section -->
 <div class="content home-content">
-    <h2>Welcome to PO<sup>2</sup> Workshop</h2>
-    <p>Notable Hypoxic Events of the Geologic Past</p>
+    <h2>PO<sup>2</sup>: Notable Hypoxic Events of the Geologic Past </h2>
 
-    <h2>Upcoming Workshop</h2>
     <p><strong>Date:</strong> December 10-12, 2025<br>
         <strong>Location:</strong> Raleigh, USA<br>
         <strong>Registration:</strong> Open Summer 2025</p>
