Update website content

--- a/about.html
+++ b/about.html
@@ -1,3 +1,5 @@
+Updated about.html
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -21,9 +23,8 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="speakers.html" class="active">Speakers</a></li>
-                    <li><a href="past-workshops.html">Past Workshops</a></li>
+                    <li><a href="about.html" class="active">About</a></li>
+                    <li><a href="speakers.html">Speakers</a></li>
                     <li><a href="directions.html">Directions</a></li>
                     <li><a href="faq.html">FAQ</a></li>
                 </ul>
@@ -32,9 +33,18 @@
     </header>
 
     <div class="content">
-        <h1>Featured Speakers</h1>
+        <h1>About</h1>
+        <h2>Organizers</h2>
+        <ul style="list-style-type: none; padding: 0;">
+            <li style="margin-bottom: 10px;">Catherine Davis (North Carolina State University, USA)</li>
+            <li style="margin-bottom: 10px;">Alexandra Auderset (University of Southampton, UK)</li>
+            <li style="margin-bottom: 10px;">Anya Hess (George Mason University, USA)</li>
+            <li style="margin-bottom: 10px;">Babette Hoogakker (Heriot Watt University, UK)</li>
+            <li style="margin-bottom: 10px;">Michael Kipp (Duke University, USA)</li>
+            <li style="margin-bottom: 10px;">Adina Paytan (University of California, Santa Cruz, USA)</li>
+        </ul>
         <div class="coming-soon">
-            Coming soon
+            More information coming soon
         </div>
     </div>
 
