--- a/faq.html
+++ b/faq.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Directions & Travel - Past Ocean Oxygen Workshop</title>
+    <title>FAQ - Past Ocean Oxygen Workshop</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         .coming-soon {
@@ -22,10 +22,9 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="speakers.html" class="active">Speakers</a></li>
-                    <li><a href="past-workshops.html">Past Workshops</a></li>
+                    <li><a href="speakers.html">Speakers</a></li>
                     <li><a href="directions.html">Directions</a></li>
-                    <li><a href="faq.html">FAQ</a></li>
+                    <li><a href="faq.html" class="active">FAQ</a></li>
                 </ul>
             </nav>
         </div>
