--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="speakers.html">Speakers</a></li>
-                <li><a href="past-workshops.html">Past Workshops</a></li>
                 <li><a href="directions.html">Directions</a></li>
                 <li><a href="faq.html">FAQ</a></li>
             </ul>
@@ -38,7 +37,7 @@
     <h2>PO<sup>2</sup>: Notable Hypoxic Events of the Geologic Past </h2>
 
     <p><strong>Date:</strong> December 10-12, 2025<br>
-        <strong>Location:</strong> Raleigh, USA<br>
+        <strong>Location:</strong> Raleigh, USA and virtually everywhere<br>
         <strong>Registration:</strong> Open Summer 2025</p>
 
 </div>
