--- a/speakers.html
+++ b/speakers.html
@@ -1,3 +1,5 @@
+Updated speakers.html
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -23,7 +25,6 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="speakers.html" class="active">Speakers</a></li>
-                    <li><a href="past-workshops.html">Past Workshops</a></li>
                     <li><a href="directions.html">Directions</a></li>
                     <li><a href="faq.html">FAQ</a></li>
                 </ul>
