--- a/directions.html
+++ b/directions.html
@@ -22,9 +22,8 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="speakers.html" class="active">Speakers</a></li>
-                    <li><a href="past-workshops.html">Past Workshops</a></li>
-                    <li><a href="directions.html">Directions</a></li>
+                    <li><a href="speakers.html">Speakers</a></li>
+                    <li><a href="directions.html" class="active">Directions</a></li>
                     <li><a href="faq.html">FAQ</a></li>
                 </ul>
             </nav>
