Update website content

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <!-- Main Content Section -->
 <div class="content home-content">
-    <h2>PO<sup>2</sup>: Notable Hypoxic Events of the Geologic Past </h2>
+    <h2>PO2: Notable Hypoxic Events of the Geologic Past </h2>
 
     <p><strong>Date:</strong> December 10-12, 2025<br>
         <strong>Location:</strong> Raleigh, USA and virtually everywhere<br>
