--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@ Updated about.html
     </div>
 
     <footer>
-        <p>© 2025 Past Ocean Oxygen Workshop | Contact: info@po2workshop.org</p>
+        <p>© 2025 Past Ocean Oxygen Workshop | Contact: info@po2workshop.com</p>
     </footer>
 </body>
 </html>
