Update website content

--- a/speakers.html
+++ b/speakers.html
@@ -40,7 +40,7 @@ Updated speakers.html
     </div>
 
     <footer>
-        <p>© 2025 Past Ocean Oxygen Workshop | Contact: info@po2workshop.org</p>
+        <p>© 2025 Past Ocean Oxygen Workshop | Contact: info@po2workshop.com</p>
     </footer>
 </body>
 </html>
