Update website content

--- a/about.html
+++ b/about.html
@@ -38,6 +38,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html" class="active">About</a></li>
                     <li><a href="speakers.html">Speakers</a></li>
+                    <li><a href="past-workshops.html">Past Workshops</a></li>
                     <li><a href="directions.html">Directions</a></li>
                     <li><a href="faq.html">FAQ</a></li>
                 </ul>
