--- a/directions.html
+++ b/directions.html
@@ -23,6 +23,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="speakers.html">Speakers</a></li>
+                    <li><a href="past-workshops.html">Past Workshops</a></li>
                     <li><a href="directions.html" class="active">Directions</a></li>
                     <li><a href="faq.html">FAQ</a></li>
                 </ul>
@@ -38,7 +39,7 @@
     </div>
 
     <footer>
-        <p>© 2025 Past Ocean Oxygen Workshop | Contact: info@po2workshop.com</p>
+        <p>© 2025 Past Ocean Oxygen Workshop | Contact: info@po2workshop.org</p>
     </footer>
 </body>
 </html>
