--- a/speakers.html
+++ b/speakers.html
@@ -1,5 +1,3 @@
-Updated speakers.html
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -25,6 +23,7 @@ Updated speakers.html
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="speakers.html" class="active">Speakers</a></li>
+                    <li><a href="past-workshops.html">Past Workshops</a></li>
                     <li><a href="directions.html">Directions</a></li>
                     <li><a href="faq.html">FAQ</a></li>
                 </ul>
@@ -40,7 +39,7 @@ Updated speakers.html
     </div>
 
     <footer>
-        <p>© 2025 Past Ocean Oxygen Workshop | Contact: info@po2workshop.com</p>
+        <p>© 2025 Past Ocean Oxygen Workshop | Contact: info@po2workshop.org</p>
     </footer>
 </body>
 </html>
