--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="speakers.html">Speakers</a></li>
+                <li><a href="past-workshops.html">Past Workshops</a></li>
                 <li><a href="directions.html">Directions</a></li>
                 <li><a href="faq.html">FAQ</a></li>
             </ul>
@@ -43,7 +44,7 @@
 </div>
 
 <footer>
-    <p>© 2025 Past Ocean Oxygen Workshop | Contact: info@po2workshop.com</p>
+    <p>© 2025 Past Ocean Oxygen Workshop | Contact: info@po2workshop.org</p>
 </footer>
 </body>
 </html>
