Update website content

--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-G4TW9DGBYW"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-G4TW9DGBYW');
+    </script>
     <title>Past Ocean Oxygen Workshop</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -39,6 +47,7 @@
 
     <p><strong>Date:</strong> December 10-12, 2025<br>
         <strong>Location:</strong> Raleigh, USA and virtually everywhere<br>
+        <strong>Venue:</strong> North Carolina Museum of Natural Sciences</p>
         <strong>Registration:</strong> Open Summer 2025</p>
 
 </div>
