--- a/speakers.html
+++ b/speakers.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Speakers - Past Ocean Oxygen Workshop</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-G4TW9DGBYW"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-G4TW9DGBYW');
+    </script>
+    <title>Past Ocean Oxygen Workshop</title>
     <link rel="stylesheet" href="styles.css">
-    <style>
-        .coming-soon {
-            text-align: center;
-            padding: 50px 0;
-            font-size: 1.5rem;
-            color: #666;
-        }
-    </style>
 </head>
 <body>
     <header>
