--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <p><strong>Date:</strong> December 10-12, 2025<br>
         <strong>Location:</strong> Raleigh, USA and virtually everywhere<br>
-        <strong>Venue:</strong> North Carolina Museum of Natural Sciences</p>
+        <strong>Venue:</strong> North Carolina Museum of Natural Sciences<br>
         <strong>Registration:</strong> Open Summer 2025</p>
 
 </div>
